RESOLVED FIXED105663
Some characters are not rotated properly in vertical text
https://bugs.webkit.org/show_bug.cgi?id=105663
Summary Some characters are not rotated properly in vertical text
Enrica Casucci
Reported 2012-12-21 14:57:06 PST
There are several additional characters that should be treated as CJK ideographs or symbols and some characters that should always displayed upright. <rdar://problem/12738911>
Attachments
Enrica Casucci
Comment 1 2013-01-07 14:05:31 PST
Committed revision 138986.
Note You need to log in before you can comment on or make changes to this bug.