Some characters are not rotated properly in vertical text https://bugs.webkit.org/show_bug.cgi?id=105663 <rdar://problem/12738911>

Source/WebCore:

Reviewed by Dan Bernstein.

Test: platform/mac/fast/text/vertical-no-sideways.html

* platform/graphics/Font.cpp:
(WebCore::Font::isCJKIdeographOrSymbol): Added several characters to the list.
* platform/graphics/FontFastPath.cpp:
(WebCore::shouldIgnoreRotation): Added
(WebCore::Font::glyphDataAndPageForNonCJKCharacterWithGlyphOrientation): Added logic to avoid
rotation for all the characters listed in shouldIgnoreRotation.

LayoutTests:

Reviewed by Dan Bernstein.

* platform/mac/fast/text/vertical-no-sideways.html: Added.
* platform/mac/platform/mac/fast/text/vertical-no-sideways-expected.txt: Added.



Canonical link: https://commits.webkit.org/124448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138986 268f45cc-cd09-0410-ab3c-d52691b4dbfc