Source/WebCore/platform/graphics/FontFastPath.cpp
@@ -42,23 +42,51 @@ using namespace std;
 
 namespace WebCore {
 
+static bool shouldIgnoreRotation(UChar32 character)
+{
+    switch (character) {
+    case 0x02018:
+    case 0x02019:
+    case 0x000A7:
+    case 0x000A9:
+    case 0x000AE:
+    case 0x000B6:
+    case 0x000BC:
+    case 0x000BD:
+    case 0x000BE:
+    case 0x002E5:
+    case 0x002E6:
+    case 0x002E7:
+    case 0x002E8:
+    case 0x002E9:
+    case 0x02044:
+    case 0x0210F:
+    case 0x02122:
+    case 0x02126:
+    case 0x02127:
+    case 0x0212E:
+    case 0x02135:
+    case 0x02153:
+    case 0x02154:
+    case 0x02155:
+    case 0x0215B:
+    case 0x0215C:
+    case 0x0215D:
+    case 0x0215E:
+    case 0x02305:
+    case 0x02306:
+    case 0x02318:
+    case 0x025CA:
+        return true;
+    
+    default:
+        return false;
+    }
+}
+
 static inline std::pair<GlyphData, GlyphPage*> glyphDataAndPageForNonCJKCharacterWithGlyphOrientation(UChar32 character, NonCJKGlyphOrientation orientation, GlyphData& data, GlyphPage* page, unsigned pageNumber)
 {
-    if (orientation == NonCJKGlyphOrientationVerticalRight) {
-        RefPtr<SimpleFontData> verticalRightFontData = data.fontData->verticalRightOrientationFontData();
-        GlyphPageTreeNode* verticalRightNode = GlyphPageTreeNode::getRootChild(verticalRightFontData.get(), pageNumber);
-        GlyphPage* verticalRightPage = verticalRightNode->page();
-        if (verticalRightPage) {
-            GlyphData verticalRightData = verticalRightPage->glyphDataForCharacter(character);
-            // If the glyphs are distinct, we will make the assumption that the font has a vertical-right glyph baked
-            // into it.
-            if (data.glyph != verticalRightData.glyph)
-                return make_pair(data, page);
-            // The glyphs are identical, meaning that we should just use the horizontal glyph.
-            if (verticalRightData.fontData)
-                return make_pair(verticalRightData, verticalRightPage);
-        }
-    } else if (orientation == NonCJKGlyphOrientationUpright) {
+    if (orientation == NonCJKGlyphOrientationUpright || shouldIgnoreRotation(character)) {
         RefPtr<SimpleFontData> uprightFontData = data.fontData->uprightOrientationFontData();
         GlyphPageTreeNode* uprightNode = GlyphPageTreeNode::getRootChild(uprightFontData.get(), pageNumber);
         GlyphPage* uprightPage = uprightNode->page();
@@ -71,6 +99,20 @@ static inline std::pair<GlyphData, GlyphPage*> glyphDataAndPageForNonCJKCharacte
             // glyph, so we fall back to the upright data and use the horizontal glyph.
             if (uprightData.fontData)
                 return make_pair(uprightData, uprightPage);
+        }
+    } else if (orientation == NonCJKGlyphOrientationVerticalRight) {
+        RefPtr<SimpleFontData> verticalRightFontData = data.fontData->verticalRightOrientationFontData();
+        GlyphPageTreeNode* verticalRightNode = GlyphPageTreeNode::getRootChild(verticalRightFontData.get(), pageNumber);
+        GlyphPage* verticalRightPage = verticalRightNode->page();
+        if (verticalRightPage) {
+            GlyphData verticalRightData = verticalRightPage->glyphDataForCharacter(character);
+            // If the glyphs are distinct, we will make the assumption that the font has a vertical-right glyph baked
+            // into it.
+            if (data.glyph != verticalRightData.glyph)
+                return make_pair(data, page);
+            // The glyphs are identical, meaning that we should just use the horizontal glyph.
+            if (verticalRightData.fontData)
+                return make_pair(verticalRightData, verticalRightPage);
         }
     }
     return make_pair(data, page);
